--- a/myblog/mainsite/templates/mainsite/home.html
+++ b/myblog/mainsite/templates/mainsite/home.html
@@ -19,7 +19,11 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 80%;
+        width: 55%;
+    }
+
+    body {
+        background-color: rgba(0, 0, 0, 0.8);
     }
 
 </style>
