--- a/web/mb/static/style.css
+++ b/web/mb/static/style.css
@@ -4,20 +4,94 @@
    BASE STYLES V
 ========================================================= */
 
-img {
-   max-width: 100%;
-   max-height: 100%;
-   display: block;
-}
-
-.center {
-   margin-top: 50px;
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-   width: 55%;
-}
-
 body {
-   background-color: rgba(0, 0, 0, 0.8);
+   font-family: monospace, 'Times New Roman', Times, serif;
+   display: block;
+   background-color: #B4DCE3;
+   height: 100%;
+   width: 100%;
 }
+
+.container {
+   max-width: 760px;
+   margin: auto;
+}
+
+footer {
+   font-size: 12px;
+   margin-top: 30px;
+   color: #142224;
+   text-align: center;
+   margin: 25px auto;
+   padding: 10px;
+   border-top: 1px solid #142224;
+   width: 80%;
+}
+
+.header {
+   color: #B4DCE3;
+   line-height: 50px;
+   background-color: #142224;
+}
+
+.navbar {
+   overflow: hidden;
+   font-family: system-ui;
+   padding: 10px;
+}
+
+.navbar-right {
+   float: right;
+}
+
+.navbar a {
+   float: left;
+   display: block;
+   color: #B4DCE3;
+   text-align: center;
+   padding: 0 25px;
+   text-decoration: none;
+   font-size: 17px;
+ }
+
+ .navbar a:hover {
+   background-color: #2f434683;
+   color: #4FB6BE;
+   border-radius: 6px;
+   border-bottom: 2px solid #9ecaed;
+ }
+
+ .navbar a.active {
+   background-color: #2f434683;
+   color: #4FB6BE;
+   border-radius: 6px;
+   border-bottom: 2px solid #9ecaed;
+   box-shadow: 0 0 5px #9ecaed;
+   
+ }
+
+ .navbar .icon {
+   display: none;
+ }
+
+ @media screen and (max-width: 600px) {
+   .navbar a:not(:first-child) {display: none;}
+   .navbar a.icon {
+     float: right;
+     display: block;
+   }
+ }
+
+ @media screen and (max-width: 600px) {
+   .navbar.responsive {position: relative;}
+   .navbar.responsive a.icon {
+     position: absolute;
+     right: 0;
+     top: 0;
+   }
+   .navbar.responsive a {
+     float: none;
+     display: block;
+     text-align: left;
+   }
+ }
