--- a/web/mb/templates/base.html
+++ b/web/mb/templates/base.html
@@ -24,3 +24,9 @@
     {% block javascript %}
     {% endblock %}
 </html>
+
+<style>
+    body {
+        background-image: url({{ static('img/Futuristic.jpg') }});
+    }
+</style>
