--- a/web/mb/templates/header.html
+++ b/web/mb/templates/header.html
@@ -1,15 +1,15 @@
 <div class="header">
     <div class="navbar" id="myNav">
-        <a class="navbar-brand" href="#">LOGO</a>
+        <a class="navbar-brand" href="#"><img src="{{ static('img/mylogo.png') }}" alt="mylogo"></a>
         <a href="#home" class="active"><i class="fas fa-home"></i> Home</a>
         <a href="#news">News</a>
         <a href="javascript:void(0);" class="icon" onclick="OpenNav()">
             <i class="fa fa-bars"></i>
         </a>
         <div class="navbar-right">
-            <a href="#"><i class="fas fa-envelope-open-text"></i></a>
-            <a href="https://www.facebook.com/Anton.Antonovich.Antonovskyj/"><i class="fab fa-facebook-square"></i></a>
             <a href="https://www.linkedin.com/in/antanas-arcimavičius-4100891a4"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/Anton.Antonovich.Antonovskyj/"><i class="fab fa-facebook-square"></i></a>
+            <a href="#"><i class="fas fa-envelope-open-text"></i></a>
         </div>
     </div>
 </div>
