--- a/web/mb/templates/home.html
+++ b/web/mb/templates/home.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="container">
-    <div class="center">
-       
+<div class="center">
+    <h1>Hello, my name is Anthony</h1>
+    <p>I am a junior full-stack web developer working with Django/Python</p>
+</div>
+<div class="shapes">
+    <div class="left">
+    
+    </div>
+    <div class="right">
+    
     </div>
 </div>
+
 
 {% endblock %}
