added modal popup for email form

--- a/web/mb/templates/base.html
+++ b/web/mb/templates/base.html
@@ -19,6 +19,8 @@
         {% block content %}
         {% endblock %}
 
+        {% include "email_form.html" %}
+
         {% include "footer.html" %}
     </body>
     {% block javascript %}
