--- a/web/mb/static/style.css
+++ b/web/mb/static/style.css
@@ -14,8 +14,18 @@ body {
 }
 
 .container {
+   position: relative;
    max-width: 1000px;
    margin: auto;
+}
+
+.about-content {
+   width: 70%;
+   margin-right: auto;
+   background-color: rgba(0, 0, 0, 0.158);
+   animation-name: content-load;
+   animation-duration: 300ms;
+   
 }
 
 footer {
@@ -39,6 +49,7 @@ footer {
    padding: 10px;
    max-width: 960px;
    margin: auto;
+   animation: nav-load 300ms ease-in;
 }
 
 .navbar-right {
@@ -80,6 +91,25 @@ footer {
    display: none;
  }
 
+ .button-primary {
+   background-color: #2FE7BE;
+   border: 0;
+   margin-top: 20px;
+   cursor: pointer;
+   height: 50px;
+   font-size: 1em;
+   transition: all 0.5s ease-in-out;
+   border-radius: 4px;
+   width: 90%;
+}
+
+.button-primary:hover,
+.button-primary:active { 
+   background-color: #FFFFFF; 
+   border: 1px solid rgba(0,0,0,0.8);
+   color: rgba(0,0,0,0.8); 
+}
+
  @media screen and (max-width: 600px) {
    .navbar a:not(:first-child) {display: none;}
    .navbar a.icon {
@@ -111,7 +141,7 @@ footer {
    SHAPES
 ========================================================= */
 
-.shapes {
+.container {
    display: flex;
    margin-top: 10px;
    height: 100vh;
@@ -158,3 +188,113 @@ footer {
  .center p {
     margin: 25px;
  }
+
+ @keyframes nav-load {
+    0% {
+      transform: translateY(-100%);
+    }
+
+    100% {
+      transform: translateY(0);
+    }
+ }
+
+ @keyframes content-load {
+   0% {
+     /* transform: translateX(-20px); */
+     width: 0;
+     opacity: 0;
+   }
+
+   100% {
+     /* transform: translateX(0); */
+     width: 70%;
+     opacity: 1;
+   }
+}
+
+
+/* =========================================================
+   MODAL POPUP
+========================================================= */
+
+.email-modal {
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.7);
+   position: fixed;
+   top: 0;
+   justify-content: center;
+   align-items: center;
+   display: none;
+   backdrop-filter: blur(10px);
+}
+
+.modal-content {
+   width: 500px;
+   height: 380px;
+   background-color: #2B2F3E;
+   color: white;
+   text-align: center;
+   padding: 40px;
+   position: relative;
+   border: 5px solid #ffffff12;
+}
+
+.modal-content h4 {
+   color: #2FE7BE;
+   text-align: center;
+   font-weight: 500;
+   font-size: 1.25em;
+}
+
+.email-modal textarea {
+   box-sizing: border-box;
+   height: 200px;
+   width: 90%;
+   margin-top: 10px;
+}
+
+.email-modal p {
+   font-family: sans-serif;
+   margin: 10px 0;
+   color: #757575;
+   font-size: 0.9em;
+   font-style: italic;
+}
+
+.email-modal label {
+   font-family: sans-serif;
+   float: left;
+   margin-left: 25px;
+}
+
+.email-modal input[type='email'] {
+   width: 65%;
+   margin-bottom: 5px;
+   margin-left: 5px;
+}
+
+.email-modal input[type='text'] {
+   width: 70%;
+   float: right;
+   margin-right: 25px;
+}
+
+.close {
+   position: absolute;
+   top: 0;
+   right: 14px;
+   font-size: 42px;
+   transform: rotate(45deg);
+   cursor: pointer;
+}
+
+.blur-filter {
+   -webkit-filter: blur(2px);
+   -moz-filter: blur(2px);
+   -o-filter: blur(2px);
+   -ms-filter: blur(2px);
+   filter: blur(2px);
+}
+
