--- a/web/mb/templates/home.html
+++ b/web/mb/templates/home.html
@@ -5,13 +5,13 @@
     <h1>Hello, my name is Anthony</h1>
     <p>I am a junior full-stack web developer working with Django/Python</p>
 </div>
-<div class="shapes">
-    <div class="left">
-    
-    </div>
-    <div class="right">
-    
-    </div>
+<div class="container">
+    <a href="" class="left">
+
+    </a>
+    <a href="" class="right">
+
+    </a>
 </div>
 
 
