--- a/web/mb/templates/home.html
+++ b/web/mb/templates/home.html
@@ -3,7 +3,7 @@
 
 <div class="center">
     <h1>Hello, my name is Anthony</h1>
-    <p>I am a junior full-stack web developer working with Django/Python</p>
+    <p>I am a junior web developer working with Django/Python</p>
 </div>
 <div class="container">
     <a href="" class="left">
@@ -12,6 +12,9 @@
     <a href="" class="right">
 
     </a>
+</div>
+<div class="bottom">
+
 </div>
 
 
