--- a/web/mb/templates/header.html
+++ b/web/mb/templates/header.html
@@ -4,8 +4,8 @@
             <i class="fas fa-home"></i>
             <img src="{{ static('img/mylogo.png') }}" alt="mylogo">
         </a>
-        <a href="{{reverse('mainsite:home')}}" class="active">Portfolio</a>
-        <a href="#about">About</a>
+        <a href="{{reverse('mainsite:portfolio')}}" class="active">Portfolio</a>
+        <a href="{{reverse('mainsite:about')}}">About</a>
         <a href="javascript:void(0);" class="icon" onclick="OpenNav()">
             <i class="fa fa-bars"></i>
         </a>
