--- a/web/mb/templates/home.html
+++ b/web/mb/templates/home.html
@@ -7,7 +7,8 @@
         <p>I am a junior web developer working with Django/Python</p>
     </div>
     <div class="bottom">
-
+        <p>Page source code</p>
+        <a href="https://github.com/AntanasArcimavicius/my-blog"><i class="fab fa-github fa-3x"></i></a>
     </div>
 </div>
 
