--- a/web/mb/templates/email_form.html
+++ b/web/mb/templates/email_form.html
@@ -4,7 +4,7 @@
             <h4>CONTACT ME</h4>
             <p>Write me a message</p>
 
-        <form method="post">
+        <form method="POST">
             {{ csrf_input }}
                 {{ form.from_email }}
                 {{ form.subject }}
