--- a/web/mb/templates/home.html
+++ b/web/mb/templates/home.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="container">
-    <div class="center">
-        <h1>Hello, my name is Anthony</h1>
-        <p>I am a junior web developer working with Django/Python</p>
-    </div>
-    <div class="bottom">
-        <p>Page source code</p>
-        <a href="https://github.com/AntanasArcimavicius/my-blog"><i class="fab fa-github fa-3x"></i></a>
+<div class="hero">
+    <div class="container">
+        <div class="center">
+            <h1>Hello, my name is Anthony</h1>
+            <p>I am a junior web developer working with Django/Python</p>
+        </div>
+        <div class="bottom">
+            <p>Page source code</p>
+            <a href="https://github.com/AntanasArcimavicius/my-blog"><i class="fab fa-github fa-3x"></i></a>
+        </div>
     </div>
 </div>
 
