--- a/web/mb/templates/home.html
+++ b/web/mb/templates/home.html
@@ -12,6 +12,24 @@
     </div>
 </div>
 
+<div class="about-section">
+    <h1>ABOUT ME</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Officia animi aliquam possimus rerum, facilis debitis, 
+        dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. 
+        Animi, asperiores sunt?
+    </p>
+    <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
+    </div>
+    <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
+    </div>
+    <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
+    </div>
+</div>
+
 
 
 {% endblock %}
