--- a/web/mb/static/style.css
+++ b/web/mb/static/style.css
@@ -260,6 +260,10 @@ form input {
       top: 10%;
    }
 
+   #myNav {
+      background: #9e9e9e30;
+   }
+
    .navbar a {display: none;}
 
    #burger {
@@ -295,5 +299,24 @@ form input {
       display: flex;
       text-align: left;
    }
+
+   .navbar .navbar-brand {
+      height: 40px;
+   }
+   
+   .navbar .navbar-brand img {
+      height: 40px;
+      margin-top: 7px;
+   }
  }
+
+/* =========================================================
+   ABOUT
+========================================================= */
+ 
+.about-section {
+   min-height: 100vh;
+   background-color: #757575;
+   color: white;
+}
 
