--- a/web/mb/templates/header.html
+++ b/web/mb/templates/header.html
@@ -5,13 +5,13 @@
                 <i class="fas fa-home"></i>
                 <img src="{{ static('img/mylogo.png') }}" alt="mylogo">
             </a>
-            <a href="javascript:void(0);" class="burger-icon" id="burger" onclick="OpenNav()">
+            <a href="javascript:void(0);" class="burger-icon" id="burger" onclick="openNav()">
                 <i class="fa fa-bars"></i>
             </a>
         </div>
         <div class="dropdown">
             <a href="{{reverse('mainsite:portfolio')}}" class="active">Portfolio</a>
-            <a href="{{reverse('mainsite:about')}}">About</a>
+            <a href="javascript:void(0);" onclick="scrollToAbout()">About</a>
             <div class="navbar-right">
                 <a href="https://www.linkedin.com/in/antanas-arcimavičius-4100891a4"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.facebook.com/Anton.Antonovich.Antonovskyj/"><i class="fab fa-facebook-square"></i></a>
@@ -22,15 +22,21 @@
 </div>
 
 <script>
+    const body = document.body
     const nav = document.querySelector("#myNav");
     const navTop = document.querySelector(".nav-top")
+    const aboutSection = document.querySelector(".about-section")
 
-    function OpenNav() {
+    function openNav() {
         nav.classList.toggle("opened");
         navTop.classList.toggle("clearfix")
     }
 
-    document.body.addEventListener("click", function(event) {
+    function scrollToAbout() {
+        body.scrollTop = aboutSection.offsetTop
+    }
+
+    body.addEventListener("click", function(event) {
         if (!nav.contains(event.target)) {
             nav.className = "navbar";
         }
