--- a/web/mb/templates/home.html
+++ b/web/mb/templates/home.html
@@ -13,20 +13,27 @@
 </div>
 
 <div class="about-section">
-    <h1>ABOUT ME</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Officia animi aliquam possimus rerum, facilis debitis, 
-        dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. 
-        Animi, asperiores sunt?
-    </p>
-    <div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
-    </div>
-    <div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
-    </div>
-    <div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
+    <div class="content">
+        <img src="" alt="profile-photo">
+        <h1>ABOUT ME</h1>
+        <h4>Junior Web Developer</h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Officia animi aliquam possimus rerum, facilis debitis, 
+            dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. 
+            Animi, asperiores sunt?
+        </p>
+        <div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
+        </div>
+        <div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
+        </div>
+        <div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
+        </div>
+        <div  class="button-primary linked-in">
+            <a href="https://www.linkedin.com/in/antanas-arcimavičius-4100891a4">Go to LinkedIn</a>
+        </div>
     </div>
 </div>
 
