--- a/web/mb/static/style.css
+++ b/web/mb/static/style.css
@@ -17,6 +17,10 @@ body {
    position: relative;
    max-width: 1000px;
    margin: auto;
+   display: flex;
+   margin-top: 10px;
+   height: 90vh;
+   justify-content: space-between;
 }
 
 .about-content {
@@ -128,13 +132,6 @@ a.burger-icon {
 /* =========================================================
       HOME
 ========================================================= */
-
-.container {
-   display: flex;
-   margin-top: 10px;
-   height: 80vh;
-   justify-content: space-between;
-}
 
 .center {
    position: absolute;
@@ -256,6 +253,11 @@ form input {
 ========================================================= */
 
 @media screen and (max-width: 600px) {
+
+   .container {
+      height: 80vh;
+   }
+
    .center {
       top: 10%;
    }
@@ -308,6 +310,10 @@ form input {
       height: 40px;
       margin-top: 7px;
    }
+
+   .linked-in {
+      width: 80%;
+   }
  }
 
 /* =========================================================
@@ -316,7 +322,45 @@ form input {
  
 .about-section {
    min-height: 100vh;
-   background-color: #757575;
+   background-color: #333232;
    color: white;
+   font-family: sans-serif;
+   text-align: center;
+}
+
+.content {
+   max-width: 1000px;
+   margin: auto;
+}
+
+.about-section img {
+   width: 100%;
+   margin: 20px 0;
+}
+
+.about-section h1 {
+   font-size: 3rem;
+   padding-bottom: 20px;
+   color: #B4DCE3;
+}
+
+.about-section h4 {
+   padding-bottom: 10px;
+   color: #B4DCE3;
+   font-size: 1.5rem;
+}
+
+.linked-in {
+   margin: auto;
+   width: 40%;
+   padding: 10px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-top: 20px;
+}
+
+.linked-in a {
+   text-decoration: none;
 }
 
