about me page fixes

--- a/web/mb/templates/header.html
+++ b/web/mb/templates/header.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header sticky">
     <div class="navbar" id="myNav">
         <div class="nav-top">
             <a class="navbar-brand" id="logo" href="{{reverse('mainsite:home')}}">
