--- a/web/mb/static/style.css
+++ b/web/mb/static/style.css
@@ -51,6 +51,12 @@ footer {
    overflow: auto;
 }
 
+.sticky {
+   position: -webkit-sticky; /* Safari */
+   position: sticky;
+   top: 0;
+}
+
 .navbar {
    overflow: hidden;
    font-family: system-ui;
@@ -249,13 +255,78 @@ form input {
 }
 
 /* =========================================================
+   ABOUT
+========================================================= */
+ 
+.about-section {
+   min-height: 100vh;
+   background-color: #242526;
+   color: white;
+   font-family: sans-serif;
+   text-align: center;
+}
+
+.content {
+   max-width: 1000px;
+   padding-top: 100px;
+   margin: auto;
+}
+
+.about-section img {
+   position: relative;
+   margin: 10px auto;
+   display: inline-block;
+   width: 150px;
+   height: 150px;
+   border-radius: 50%;
+   object-fit: cover;
+   border: #242526 solid 3px;
+}
+
+.about-section h1 {
+   font-size: 3rem;
+   padding-bottom: 20px;
+   color: #B4DCE3;
+}
+
+.about-section h4 {
+   padding-bottom: 10px;
+   color: #B4DCE3;
+   font-size: 1.5rem;
+}
+
+.linked-in {
+   margin: auto;
+   width: 40%;
+   height: 40px;
+   padding: 10px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-top: 20px;
+}
+
+.linked-in a {
+   text-decoration: none;
+}
+
+
+/* =========================================================
    MEDIA Q
 ========================================================= */
 
 @media screen and (max-width: 600px) {
 
    .container {
-      height: 80vh;
+      height: 70vh;
+   }
+
+   .about-section {
+      font-size: 14px;
+   }
+
+   .about-section h1{
+      font-size: 14px;
    }
 
    .center {
@@ -316,51 +387,4 @@ form input {
    }
  }
 
-/* =========================================================
-   ABOUT
-========================================================= */
- 
-.about-section {
-   min-height: 100vh;
-   background-color: #333232;
-   color: white;
-   font-family: sans-serif;
-   text-align: center;
-}
-
-.content {
-   max-width: 1000px;
-   margin: auto;
-}
-
-.about-section img {
-   width: 100%;
-   margin: 20px 0;
-}
-
-.about-section h1 {
-   font-size: 3rem;
-   padding-bottom: 20px;
-   color: #B4DCE3;
-}
-
-.about-section h4 {
-   padding-bottom: 10px;
-   color: #B4DCE3;
-   font-size: 1.5rem;
-}
-
-.linked-in {
-   margin: auto;
-   width: 40%;
-   padding: 10px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   margin-top: 20px;
-}
-
-.linked-in a {
-   text-decoration: none;
-}
 
