--- a/web/mb/templates/home.html
+++ b/web/mb/templates/home.html
@@ -14,7 +14,7 @@
 
 <div class="about-section">
     <div class="content">
-        <img src="" alt="profile-photo">
+        <img id="profile-photo" src="{{ static('img/profile.jpg') }}" alt="profile-photo">
         <h1>ABOUT ME</h1>
         <h4>Junior Web Developer</h4>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
