minor fixes, added text, removed link from portfolio, going for MVP

--- a/web/mb/templates/home.html
+++ b/web/mb/templates/home.html
@@ -17,22 +17,17 @@
         <img id="profile-photo" src="{{ static('img/profile.jpg') }}" alt="profile-photo">
         <h1>ABOUT ME</h1>
         <h4>Junior Web Developer</h4>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-            Officia animi aliquam possimus rerum, facilis debitis, 
-            dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. 
-            Animi, asperiores sunt?
-        </p>
-        <div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
-        </div>
-        <div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
-        </div>
-        <div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia animi aliquam possimus rerum, facilis debitis, dolores unde ratione voluptas tenetur magnam eius qui laudantium laborum nemo cum. Animi, asperiores sunt?</p>
+        <div class="about-text">
+            <p>
+                Started out on my path from process automation in Cognizant corporation and now moving towards being a developer as a self-learner, 
+                and now continuously expanding my expertise in a professional developer team. 
+                Now I am efficient junior full stack developer with skills in HTML, CSS, Javascript, JQuery, Svelte.js, Python, Django and Docker. 
+                Currently working at 505HQ. Currently working with 
+                <a href="www.autoaibe.lt">autoaibe.lt</a> and <a href="www.varle.lt">varle.lt</a> projects.
+            </p>
         </div>
         <div  class="button-primary linked-in">
-            <a href="https://www.linkedin.com/in/antanas-arcimavičius-4100891a4">Go to LinkedIn</a>
+            <a href="https://www.linkedin.com/in/antanas-arcimavičius-4100891a4">Go to my LinkedIn</a>
         </div>
     </div>
 </div>
