--- a/web/mb/templates/header.html
+++ b/web/mb/templates/header.html
@@ -2,7 +2,6 @@
     <div class="navbar" id="myNav">
         <div class="nav-top">
             <a class="navbar-brand" id="logo" href="{{reverse('mainsite:home')}}">
-                <i class="fas fa-home"></i>
                 <img src="{{ static('img/mylogo.png') }}" alt="mylogo">
             </a>
             <a href="javascript:void(0);" class="burger-icon" id="burger" onclick="openNav()">
@@ -10,11 +9,11 @@
             </a>
         </div>
         <div class="dropdown">
-            <a href="{{reverse('mainsite:portfolio')}}" class="active">Portfolio</a>
+            {# <a href="{{reverse('mainsite:portfolio')}}" id="portfolio-link">Portfolio</a> #}
+            <a href="#" id="portfolio-link">Portfolio</a>
             <a href="javascript:void(0);" onclick="scrollToAbout()">About</a>
             <div class="navbar-right">
                 <a href="https://www.linkedin.com/in/antanas-arcimavičius-4100891a4"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com/Anton.Antonovich.Antonovskyj/"><i class="fab fa-facebook-square"></i></a>
                 <a class="open-email"><i class="fas fa-envelope-open-text"></i></a>
             </div>
         </div>
