--- a/web/mb/templates/home.html
+++ b/web/mb/templates/home.html
@@ -19,8 +19,9 @@
         <h4>Junior Web Developer</h4>
         <div class="about-text">
             <p>
-                Started out on my path from process automation in Cognizant corporation and now moving towards being a developer as a self-learner, 
-                and now continuously expanding my expertise in a professional developer team. 
+                I started with process automation at Cognizant Corporation with autohotkey, Python and Selenium 
+                and switched to a self-learning web developer and now I am constantly expanding my experience 
+                in a team of professional developers. 
                 Now I am efficient junior full stack developer with skills in HTML, CSS, Javascript, JQuery, Svelte.js, Python, Django and Docker. 
                 Currently working at 505HQ. Currently working with 
                 <a href="www.autoaibe.lt">autoaibe.lt</a> and <a href="www.varle.lt">varle.lt</a> projects.
