--- a/web/mb/static/style.css
+++ b/web/mb/static/style.css
@@ -341,6 +341,10 @@ form input {
       height: 75vh;
    }
 
+   .bottom {
+      top: 55%;
+   }
+
    .about-section {
       font-size: 14px;
    }
@@ -367,6 +371,7 @@ form input {
 
    .header {
       height: 200px;
+      z-index: 10;
    }
 
    .nav-top {
@@ -428,6 +433,7 @@ form input {
    .about-section img {
       width: 150px;
       height: 150px;
+      z-index: 20;
    }
  }
 
